include more data in output.  set maximum size of block-end images to prevent overflow

--- a/experiment.css
+++ b/experiment.css
@@ -35,5 +35,6 @@
 }
 
 .block-end-img {
-    width: 50vw;
+    max-width: 50vw;
+    max-height: 70vh;
 }
